[package]
name = "randomizer"
version = "0.1.0"
authors = ["Raytwo <raytwost@gmail.com>, DeathChaos <deathchaos25@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01008DB008C2C000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
rand = { git = "https://github.com/skyline-rs/rand" }
byteorder = "1.3.4"
pkhexcore = { git = "https://github.com/inspier/pkhexcore-rs", branch = "randomizer" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
